# pytools

./: .gitignore  .gitmodules  .tasks  README.md  pyproject.toml  requirements.txt  test.py
pytools/: __init__.py  __main__.py  core.py  setting.py
pytools/OCR/: recognizer.py
pytools/OCR_recognizer/core/: __init__.py
pytools/PDF/: operator.py  transformer.py
pytools/PDF_transformer/core/: __init__.py
pytools/image/: __init__.py
pytools/imgs/: __init__.py
pytools/lib/: aiofile.py
pytools/libs/: asynctk.py  clipboard.py
pytools/ui/: OCR_ui.py  PDF_ui.py  main_ui.py
pytools/ui/source/: OCR.ui  PDF.ui  main.ui
src/: main.py
src/pytools/: __init__.py  __main__.py  core.py  event_loop.py  types.py
src/pytools/OCR/: __init__.py  core.py  recognizer.py
src/pytools/PDF/: transformer.py
src/pytools/image/: __init__.py  main.py
src/pytools/lib/alib/: README.md  asynctk.py
src/pytools/lib/alib/aiofile/: __init__.py  aiofile.py
src/pytools/logging/: __init__.py
src/pytools/transform/: __init__.py  core.py
src/pytools/ui/: OCR_ui.py  main.ui  main_ui.py  popup_choose.ui  ui_main.py  ui_popup_choose.py
src/pytools/ui/source/: main.ui  option_panel.ui
tests/: test_OCR_recognizer.py  test_PDF_transformer.py  test_transform.py  test_ui.py
