[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "pytools"
version = "0.0.1"
description = "some useful tools"
readme = "README.md"
classifiers = [
    'Programmimg Language :: Python :: 3'
]
dependencies = [
    "aiohttp",
    "pdf2docx",
    "Pillow",
    "PyMuPDF",
    "pyperclip",
    "pywin32",
    "aiofiles",
    "pyside6",
    "qasync",
]

[project.scripts]
pytools = 'pytools.__main__:main'
