[project]
name = "pytools"
version = "0.0.1"
description = "some useful tools"
readme = "README.md"
classifiers = [
    'Programmimg Language :: Python :: 3'
]
dependencies = [
    "aiohttp",
    "pdf2docx",
    "Pillow",
    "pyperclip",
    "pywin32",
    "aiofiles",
    "pyside6",
    "qasync",
]
scripts = {pytools = "pytools:run"}

[tool.setuptools]
packages = {find = {where = ["./src"]}}
package-dir = {"" = "./src"}

[tool.pyright]
venv = ".venv"
venvPath = "."
include = ["./src"]
exclude = [
    "**/__pycache__",
    "**/ui"
]
